kubernetes/csi-s3/kube/manifests/webapp/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: webapp
  selector:
    app: webapp
